--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,21 @@
 #scoreBoard{
     display: inline-flex
 }
+
+.square {
+    aspect-ratio: 1;
+}
+
+.emptySquare {
+    background-color: #6d71b5;
+}
+
+.snakeSquare {
+    background-color: #e3e773;
+    border: 1px solid #000;
+}
+
+.foodSquare {
+    background-color: #55e7e7;
+    border: 1px solid #000;
+}
